--- a/julia/problem_048.ipynb
+++ b/julia/problem_048.ipynb
@@ -5,37 +5,52 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 48\n",
+    "# Problem 48\n",
     "https://projecteuler.net/problem=48"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "83fc0a8f",
+   "id": "8a4e0ff1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "83fc0a8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c110f76",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "29f97d68",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sum_self_powers (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function sum_self_powers(n)::BigInt\n",
     "    s = big(0)\n",
@@ -43,16 +58,8 @@
     "        s += big(i)^big(i)\n",
     "    end\n",
     "    return s\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bdcd0ec2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "end\n",
+    "\n",
     "@assert sum_self_powers(10) == 10405071317"
    ]
   },
@@ -62,6 +69,13 @@
    "id": "9a436e84",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  868.792 μs (9009 allocations: 1.30 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -73,52 +87,33 @@
     }
    ],
    "source": [
-    "string(sum_self_powers(1_000))[end-9:end]"
+    "@btime string(sum_self_powers(1_000))[end-9:end]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba156b3f",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e1c2cefc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 3824 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m859.334 μs\u001b[22m\u001b[39m … \u001b[35m81.101 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 6.58%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m939.792 μs              \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m  1.301 ms\u001b[22m\u001b[39m ± \u001b[32m 2.475 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m6.08% ± 3.81%\n",
-       "\n",
-       "  \u001b[34m█\u001b[39m\u001b[39m▄\u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[34m█\u001b[39m\u001b[39m█\u001b[32m█\u001b[39m\u001b[39m▆\u001b[39m▄\u001b[39m▅\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▄\u001b[39m▅\u001b[39m▄\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▅\u001b[39m▅\u001b[39m▆\u001b[39m▅\u001b[39m \u001b[39m█\n",
-       "  859 μs\u001b[90m        \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m      13.2 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m1.30 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m9009\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark string(sum_self_powers(1_000))[end-9:end]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "35a44d10",
+   "id": "41e982dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(48, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark string(sum_self_powers(1_000))[end-9:end]\n",
+    "euler.save_benchmark(48, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -126,7 +121,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
