--- a/julia/problem_050.ipynb
+++ b/julia/problem_050.ipynb
@@ -5,37 +5,62 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 50\n",
+    "# Problem 50\n",
     "https://projecteuler.net/problem=50"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0ef4b191",
+   "id": "1c261027",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using Primes, BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "0ef4b191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b962c78a",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8ca57347",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Primes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3efc3f3e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "consecutive_prime_sum (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function consecutive_prime_sum(n)\n",
     "\n",
@@ -44,8 +69,8 @@
     "    consecutives_sum = 0\n",
     "    last_j = length(p)\n",
     "\n",
-    "    for i in 1:length(p)\n",
-    "        for j in (i + consecutives_cnt):last_j\n",
+    "    for i ∈ 1:length(p)\n",
+    "        for j ∈ (i + consecutives_cnt):last_j\n",
     "            s = sum(p[i:j])\n",
     "            if s < n\n",
     "                if s ∈ p\n",
@@ -61,25 +86,24 @@
     "\n",
     "    return consecutives_sum\n",
     "\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bc84a3ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "end\n",
+    "\n",
     "@assert consecutive_prime_sum(50) == 41"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4653d3aa",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  14.372 ms (1481 allocations: 2.18 MiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -91,52 +115,33 @@
     }
    ],
    "source": [
-    "consecutive_prime_sum(1_000_000)"
+    "@btime consecutive_prime_sum(1_000_000)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "d5709a51",
+   "cell_type": "markdown",
+   "id": "24ab04f9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 340 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m14.365 ms\u001b[22m\u001b[39m … \u001b[35m 17.504 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 15.94%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m14.664 ms               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m14.691 ms\u001b[22m\u001b[39m ± \u001b[32m279.949 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m0.62% ±  1.48%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m \u001b[39m▇\u001b[39m▁\u001b[39m \u001b[39m█\u001b[39m▁\u001b[39m \u001b[39m▄\u001b[39m▂\u001b[39m▁\u001b[39m▄\u001b[39m▄\u001b[39m \u001b[39m▅\u001b[39m \u001b[39m▂\u001b[39m▂\u001b[34m▄\u001b[39m\u001b[39m▃\u001b[32m█\u001b[39m\u001b[39m▂\u001b[39m▇\u001b[39m▄\u001b[39m \u001b[39m▄\u001b[39m▁\u001b[39m \u001b[39m \u001b[39m▁\u001b[39m \u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m▆\u001b[39m▆\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[32m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▆\u001b[39m█\u001b[39m█\u001b[39m▆\u001b[39m▄\u001b[39m█\u001b[39m▄\u001b[39m█\u001b[39m▆\u001b[39m▇\u001b[39m▄\u001b[39m▇\u001b[39m▆\u001b[39m▃\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▁\u001b[39m▃\u001b[39m▅\u001b[39m▃\u001b[39m▃\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m▁\u001b[39m▄\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▃\u001b[39m \u001b[39m▅\n",
-       "  14.4 ms\u001b[90m         Histogram: frequency by time\u001b[39m         15.3 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m2.18 MiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m1481\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "b = @benchmark consecutive_prime_sum(1_000_000)"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c400bcee",
+   "id": "60fa8578",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(50, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark consecutive_prime_sum(1_000_000)\n",
+    "euler.save_benchmark(50, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -144,7 +149,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
