--- a/julia/problem_023.ipynb
+++ b/julia/problem_023.ipynb
@@ -42,7 +42,7 @@
    "id": "33829227",
    "metadata": {},
    "source": [
-    "### Solution"
+    "### Solution 1 (brute force)"
    ]
   },
   {
@@ -50,19 +50,9 @@
    "execution_count": 3,
    "id": "ec4a6db8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28123"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hi = 28123"
+    "hi = 28123;"
    ]
   },
   {
@@ -80,7 +70,7 @@
     "            append!(divisor_list, [n ÷ divisor, divisor])\n",
     "        end\n",
     "    end\n",
-    "    return sort(unique(divisor_list))[1:end-1]\n",
+    "    return sort(unique(divisor_list))[begin:end-1]\n",
     "end\n",
     "\n",
     "# Note: for this solution, the last proper divisor `28` is removed.\n",
@@ -150,11 +140,11 @@
     "function non_abundants_sums(combinations)\n",
     "    answer = 0\n",
     "    s = Set(x[end] for x ∈ combinations)\n",
-    "        for i ∈ 1:hi\n",
-    "            if i ∉ s\n",
-    "                answer += i\n",
-    "            end\n",
+    "    for i ∈ 1:hi\n",
+    "        if i ∉ s\n",
+    "            answer += i\n",
     "        end\n",
+    "    end\n",
     "    return answer\n",
     "end"
    ]
@@ -169,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  6.989 s (97636884 allocations: 3.52 GiB)\n"
+      "  7.114 s (97636884 allocations: 3.52 GiB)\n"
      ]
     },
     {
@@ -188,6 +178,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c747d88",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (build list of abundants during for-loop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7d86da4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function proper_divisors(n)\n",
+    "    divisor_list = Int64[]\n",
+    "    n ≤ 0 && return divisor_list\n",
+    "    for divisor ∈ 1:isqrt(n)+1\n",
+    "        if n % divisor == 0\n",
+    "            append!(divisor_list, [n ÷ divisor, divisor])\n",
+    "        end\n",
+    "    end\n",
+    "    return sort(unique(divisor_list))[begin:end-1]\n",
+    "end\n",
+    "\n",
+    "# Note: for this solution, the last proper divisor `28` is removed.\n",
+    "@assert proper_divisors(28) == [1, 2, 4, 7, 14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "101be119",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "non_abundant_sums (generic function with 2 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function non_abundant_sums(hi=28123)::Int\n",
+    "    # init\n",
+    "    non_abundant_sum = 0\n",
+    "    abundants = Set() \n",
+    "\n",
+    "    for n in 1:hi\n",
+    "        # build list of abundants\n",
+    "        if sum(proper_divisors(n)) > n\n",
+    "            push!(abundants, n)\n",
+    "        end\n",
+    "\n",
+    "        # check if n minus any abunant num is an abundant num\n",
+    "        if !any(abundant -> n - abundant ∈ abundants, abundants)\n",
+    "            non_abundant_sum += n\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    return non_abundant_sum\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "61e22eda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  170.561 ms (4934656 allocations: 179.14 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4179871"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime non_abundant_sums()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5c15b7ca",
    "metadata": {},
    "source": [
@@ -196,13 +282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "5d99e98c",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"./euler.jl\")\n",
-    "bm = @benchmark non_abundants_sums(combinations(filter(is_abundant, 1:hi))) samples=3 evals=3\n",
+    "bm = @benchmark non_abundant_sums()\n",
     "euler.save_benchmark(23, bm);"
    ]
   }
