--- a/python/problem_023.ipynb
+++ b/python/problem_023.ipynb
@@ -29,77 +29,74 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6257b7c2",
+   "id": "ef27b14c",
    "metadata": {},
    "source": [
-    "### Solutuon"
+    "### Solution (build list of abundants during for-loop)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cf1a7e34",
+   "id": "0ab48824",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(n):\n",
-    "    \"\"\"\n",
-    "    factorial sum\n",
-    "    f(10) == 8 # sum(1, 2, 5)\n",
-    "    \"\"\"\n",
-    "    f = []\n",
-    "    for i in range(1, n):\n",
-    "        if n%i == 0:\n",
-    "            f.append(i)\n",
-    "    return sum(f)"
+    "def isqrt(n):\n",
+    "    return int(n**.5 // 1)\n",
+    "\n",
+    "assert isqrt(25) == 5\n",
+    "assert isqrt(37) == 6"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ebc1f6a9",
+   "id": "11ae332b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def abundant(n):\n",
-    "    abundants = []\n",
-    "    for i in range(1, n+1):\n",
-    "        if f(i) > i:\n",
-    "            abundants.append(i)\n",
-    "    return abundants"
+    "def proper_divisors(n):\n",
+    "    divisor_list = []\n",
+    "    if n <= 0:\n",
+    "        return divisor_list\n",
+    "    for divisor in range(1, isqrt(n)+2):\n",
+    "        if n % divisor == 0:\n",
+    "            divisor_list.extend([int(n / divisor), divisor])\n",
+    "    return sorted(list(set(divisor_list)))[:-1]\n",
+    "\n",
+    "# Note: for this solution, the last proper divisor `28` is removed.\n",
+    "assert proper_divisors(28) == [1, 2, 4, 7, 14]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "32d1dab9",
+   "id": "93beac57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def non_abundant_sums(n=28123):\n",
+    "def non_abundant_sums(hi=28123):\n",
+    "    # init\n",
+    "    non_abundant_sum = 0\n",
+    "    abundants = set() \n",
     "\n",
-    "    # Abundant list\n",
-    "    abundants = abundant(n)\n",
+    "    for n in range(1, hi+1):\n",
+    "        # build list of abundants\n",
+    "        if sum(proper_divisors(n)) > n:\n",
+    "            abundants.add(n)\n",
     "\n",
-    "    # Combinations\n",
-    "    combinations = []\n",
-    "    for i in abundants:\n",
-    "        for j in abundants:\n",
-    "            combinations.append((i, j, i+j))\n",
-    "    \n",
-    "    # Answer\n",
-    "    answer = 0\n",
-    "    s = set([x[-1] for x in combinations])\n",
-    "    for i in range (n+1):\n",
-    "        if i not in s:\n",
-    "            answer += i\n",
-    "    return answer"
+    "        # check if n minus any abunant num is an abundant num\n",
+    "        if not any(map(lambda abundant: n - abundant in abundants, abundants)):\n",
+    "            non_abundant_sum += n\n",
+    "\n",
+    "    return non_abundant_sum"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f902502f",
+   "id": "ad7129cd",
    "metadata": {},
    "outputs": [
     {
@@ -115,26 +112,26 @@
    ],
    "source": [
     "# answer\n",
-    "non_abundant_sums(n=28123)"
+    "non_abundant_sums()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "94635cc8",
+   "id": "b63fc90f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19.4 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+      "357 ms ± 381 μs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "# benchmark\n",
-    "%timeit -n1 -r1 non_abundant_sums(n=28123)"
+    "# benchmarkt\n",
+    "%timeit non_abundant_sums()"
    ]
   },
   {
@@ -155,12 +152,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19 s ± 57.1 ms per loop (mean ± std. dev. of 3 runs, 3 loops each)\n"
+      "362 ms ± 4.74 ms per loop (mean ± std. dev. of 10 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "bm = %timeit -o -n3 -r3 non_abundant_sums(n=28123)\n",
+    "bm = %timeit -o -n10 -r10 non_abundant_sums()\n",
     "import euler\n",
     "euler.save_benchmark(23, bm)"
    ]
