--- a/julia/problem_044.ipynb
+++ b/julia/problem_044.ipynb
@@ -5,31 +5,66 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 44\n",
+    "# Problem 44\n",
     "https://projecteuler.net/problem=44"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "236042ec",
+   "execution_count": 1,
+   "id": "33a83c04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using Combinatorics, BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b01dfb35",
+   "id": "e98c99b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8310c8d7",
+   "metadata": {},
+   "source": [
+    "### Solution (brute force)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "236042ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Combinatorics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "190e82d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "pentagon_numbers (generic function with 2 methods)"
+       "pentagon_numbers (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -37,24 +72,34 @@
     }
    ],
    "source": [
-    "function pentagon_numbers(hi=10_000)\n",
-    "    values = Int64[]\n",
+    "function pentagon_numbers(hi)\n",
     "    pentagonals = map(n -> div(n * (3n -1), 2), 1:hi)\n",
-    "    for x in Combinatorics.permutations(pentagonals, 2)\n",
-    "        if abs(+(x...)) ∈ pentagonals && abs(-(x...)) ∈ pentagonals\n",
-    "            push!(values, abs(-(x...)))\n",
+    "    min_diff = maximum(pentagonals)\n",
+    "    for x ∈ Combinatorics.permutations(pentagonals, 2)\n",
+    "        diff = abs(-(x...))\n",
+    "        if diff < min_diff\n",
+    "            if abs(+(x...)) ∈ pentagonals && diff ∈ pentagonals\n",
+    "                min_diff = diff\n",
+    "            end\n",
     "        end\n",
     "    end\n",
-    "    return minimum(values)\n",
+    "    return min_diff\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b86e941c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1030.193 s (854946302 allocations: 7468.54 GiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -66,21 +111,27 @@
     }
    ],
    "source": [
-    "pentagon_numbers()"
+    "@btime pentagon_numbers(10_000) samples=1 evals=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7157162a",
+   "metadata": {},
+   "source": [
+    "### Solution (loop through pentagonals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "24e4c57f",
+   "execution_count": 6,
+   "id": "53cc0fcc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
-       " Single result which took \u001b[34m1968.167 s\u001b[39m (16.10% GC) to evaluate,\n",
-       " with a memory estimate of \u001b[33m7467.71 GiB\u001b[39m, over \u001b[33m799595274\u001b[39m allocations."
+       "pentagon (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -88,23 +139,78 @@
     }
    ],
    "source": [
-    "b = @benchmark pentagon_numbers()"
+    "function pentagon(hi)\n",
+    "    pentagon_numbers = map(n -> div(n * (3n -1), 2), 1:hi)\n",
+    "    pentagon_set = Set(pentagon_numbers)\n",
+    "    minimum_difference = maximum(pentagon_numbers) # init value\n",
+    "    for i ∈ Iterators.countfrom(2) # 2nd num is the first to have a previous num\n",
+    "        for j ∈ 1:i-1 # diff with all previous nums\n",
+    "            difference = pentagon_numbers[i] - pentagon_numbers[j]\n",
+    "            if difference > minimum_difference\n",
+    "                break\n",
+    "            elseif difference ∈ pentagon_set && pentagon_numbers[i] + pentagon_numbers[j] ∈ pentagon_set\n",
+    "                minimum_difference = difference\n",
+    "            end\n",
+    "        end\n",
+    "        if pentagon_numbers[i+1] - pentagon_numbers[i] > minimum_difference\n",
+    "            break\n",
+    "        end\n",
+    "    end\n",
+    "    return minimum_difference\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6a036d40",
+   "id": "7a8e74e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  108.878 ms (9 allocations: 55.07 MiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5482660"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime pentagon(2_500_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5eb15a41",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8e3d7f53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(44, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark pentagon(2_500_000)\n",
+    "euler.save_benchmark(44, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -112,7 +218,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
